hphp/hack/test/typecheck/bitwise_math_new_code/bitwise_ops.php.exp
File "bitwise_ops.php", line 18, characters 3-14:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 18, characters 3-6:
  Expected `int` because this is used in a bitwise operation
  File "bitwise_ops.php", line 18, characters 3-6:
  But got `bool`
File "bitwise_ops.php", line 18, characters 3-14:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 18, characters 10-14:
  Expected `int` because this is used in a bitwise operation
  File "bitwise_ops.php", line 18, characters 10-14:
  But got `bool`
File "bitwise_ops.php", line 19, characters 3-13:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 19, characters 9-13:
  Expected `int` because this is used in a bitwise operation
  File "bitwise_ops.php", line 19, characters 9-13:
  But got `bool`
File "bitwise_ops.php", line 20, characters 3-11:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 20, characters 7-11:
  Expected `int` because this is used in a bitwise operation
  File "bitwise_ops.php", line 20, characters 7-11:
  But got `bool`
File "bitwise_ops.php", line 21, characters 3-13:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 21, characters 9-13:
  Expected `int` because this is used in a bitwise operation
  File "bitwise_ops.php", line 21, characters 9-13:
  But got `bool`
File "bitwise_ops.php", line 22, characters 3-13:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 22, characters 3-9:
  Expected `int` because this is used in a bitwise operation
  File "bitwise_ops.php", line 22, characters 3-9:
  But got `string`
File "bitwise_ops.php", line 23, characters 3-15:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 23, characters 9-15:
  Expected `int` because this is used in a bitwise operation
  File "bitwise_ops.php", line 23, characters 9-15:
  But got `string`
File "bitwise_ops.php", line 24, characters 3-14:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 24, characters 3-9:
  Expected `int` because this is used in an arithmetic operation
  File "bitwise_ops.php", line 24, characters 3-9:
  But got `string`
File "bitwise_ops.php", line 25, characters 3-16:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 25, characters 10-16:
  Expected `int` because this is used in an arithmetic operation
  File "bitwise_ops.php", line 25, characters 10-16:
  But got `string`
File "bitwise_ops.php", line 26, characters 3-14:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 26, characters 8-14:
  Expected `int` because this is used in an arithmetic operation
  File "bitwise_ops.php", line 26, characters 8-14:
  But got `string`
File "bitwise_ops.php", line 27, characters 3-16:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 27, characters 10-16:
  Expected `int` because this is used in an arithmetic operation
  File "bitwise_ops.php", line 27, characters 10-16:
  But got `string`
File "bitwise_ops.php", line 28, characters 3-10:
Typing error (Typing[4423])
  File "bitwise_ops.php", line 28, characters 3-10:
  Expected `int` because this is used in a bitwise operation
  File "bitwise_ops.php", line 28, characters 4-10:
  But got `string`
